@startuml
' 当前代码对应的 UML 类图。图中保留核心类和关键关系，
' 具体 GameMessage 变体用分组类表达，避免正式报告中横向过宽。
skinparam packageStyle rectangle
skinparam classAttributeIconSize 0
skinparam linetype ortho
skinparam nodesep 35
skinparam ranksep 35
top to bottom direction

package "Model\n领域模型" as model {
  enum PlayerKind {
    Human
    LocalAi
    Remote
  }
  enum HandCategory {
    Single
    Pair
    Triple
    Straight
    Flush
    FullHouse
    FourWithOne
    StraightFlush
  }
  enum BombMode {
    None
    Enhanced
  }
  enum Difficulty {
    Easy
    Normal
    Hard
  }

  class Card {
    suit: Suit
    rank: Rank
    code: String
  }
  class Player {
    id: Int
    name: String
    kind: PlayerKind
    hand: List<Card>
    connected: Boolean
  }
  class GameState {
    players: List<Player>
    ruleSet: RuleSet
    currentPlayerId: Int
    lastPlayedHand: PlayedHand?
    passCount: Int
    firstTurn: Boolean
    winnerId: Int?
    message: String
  }
  class HandType {
    category: HandCategory
    cards: List<Card>
    primaryRank: Rank
    highCard: Card
  }
  class PlayedHand {
    playerId: Int
    type: HandType
  }
  abstract class Move <<sealed>>
  class "Move.Play" as MovePlay
  class "Move.Pass" as MovePass
  class RuleProfile {
    id: String
    title: String
    firstCard: Card
    bombMode: BombMode
    fiveCardRanking: Boolean
    sameSizeOnly: Boolean
  }
  interface RuleSet {
    profile: RuleProfile
    classify(cards): HandType?
    canLead(cards, isFirstTurn): Boolean
    canBeat(previous, next): Boolean
  }
  object NorthRuleSet
  object SouthRuleSet
  object HandClassifier
}

package "Controller\n控制器" as controller {
  class GameController {
    newGame(...)
    play(state, playerId, cards): GameState
    pass(state, playerId): GameState
    legalPlays(state, playerId): List<List<Card>>
  }
  interface AiStrategy {
    name: String
    chooseMove(state, playerId): Move
  }
  class AiController
  class GreedyAiStrategy
  class HeuristicAiStrategy
  class MonteCarloRolloutAiStrategy
  object PlayerActionPolicy
  class RoomController
  object NetworkMoveGuard
}

package "Transport\n蓝牙与消息" as transport {
  interface GameTransport {
    start(role)
    send(message)
    sendTo(peerKey, message)
    observeEvents(listener)
    close()
  }
  abstract class SocketGameTransport
  class BluetoothHostTransport
  class BluetoothClientTransport
  class LocalRoomTransport
  abstract class TransportEvent <<sealed>>
  class "Message/Connected/Disconnected/Error" as TransportEventVariants
  abstract class GameMessage <<sealed>>
  class "Room/Start/Move/Snapshot\nHeartbeat/Rejoin/Migration" as GameMessageVariants
  object GameMessageCodec
  class GameSnapshot {
    sequence: Int
    seed: Int
    ruleProfileId: String
    roomId: String
    hostEpoch: Int
  }
  class RoomSeat {
    index: Int
    name: String
    kind: RoomSeatKind
    difficulty: Difficulty?
    ready: Boolean
    connected: Boolean
    clientId: String
    connectionState: SeatConnectionState
    takeoverByAi: Boolean
  }
  enum RoomSeatKind {
    Empty
    Host
    Human
    Ai
  }
  enum SeatConnectionState {
    Empty
    Online
    Disconnected
    Migrating
  }
}

package "Profile\n玩家成长" as profile {
  class PlayerProfile {
    nickname: String
    coins: Int
    xp: Int
    avatar: AvatarProfile
    stats: ProfileStats
    history: List<MatchRecord>
    unlockedAvatars: Set<String>
    customAvatarUnlocked: Boolean
  }
  class ProfileStats {
    totalGames: Int
    wins: Int
    bluetoothGames: Int
    hardWins: Int
    winStreak: Int
  }
  class MatchRecord
  class MatchSettlement
  class ProfileChange
  class AvatarProfile
  class BuiltInAvatar
  class AchievementDefinition
  object AvatarCatalog
  object AchievementCatalog
  object ProfileProgress
  object ProfileController {
    settleMatch(...)
    renameWithCost(...)
    unlockAvatar(...)
    unlockCustomAvatar(...)
    resetStats(...)
  }
  class ProfileStore
}

package "View / Audio\nCompose 界面与音频" as view {
  class MainActivity
  class ChudadiApp
  enum Screen {
    Splash
    Lobby
    Profile
    DifficultySelect
    Rules
    Settings
    Tutorial
    Nearby
    Game
    Result
  }
  enum GameMode {
    HumanVsAi
    BluetoothRoom
  }
  enum BluetoothEntryMode {
    Choose
    HostRoom
    JoinRoom
  }
  enum GameStartPhase {
    ReadyToStart
    Dealing
    Playing
  }
  class CardRoomMusicPlayer
}

Move <|-- MovePlay
Move <|-- MovePass
RuleSet <|.. NorthRuleSet
RuleSet <|.. SouthRuleSet
AiStrategy <|.. GreedyAiStrategy
AiStrategy <|.. HeuristicAiStrategy
AiStrategy <|.. MonteCarloRolloutAiStrategy
GameTransport <|.. LocalRoomTransport
GameTransport <|.. SocketGameTransport
SocketGameTransport <|-- BluetoothHostTransport
SocketGameTransport <|-- BluetoothClientTransport
TransportEvent <|-- TransportEventVariants
GameMessage <|-- GameMessageVariants

GameState "1" o-- "4" Player
GameState --> RuleSet
GameState --> PlayedHand
Player "1" o-- "*" Card
HandType "1" o-- "*" Card
PlayedHand --> HandType
RuleSet --> RuleProfile
RuleSet --> HandClassifier
RuleProfile --> Card

GameController --> GameState
GameController --> RuleSet
GameController --> Move
AiController --> AiStrategy
AiController --> GameController
PlayerActionPolicy --> GameState
NetworkMoveGuard --> GameState
NetworkMoveGuard --> GameMessage

RoomSeat --> RoomSeatKind
RoomSeat --> SeatConnectionState
RoomSeat --> Difficulty
GameSnapshot "1" o-- "*" Player
GameMessageVariants --> RoomSeat
GameMessageVariants --> GameSnapshot
GameMessageCodec --> GameMessage

ProfileController --> PlayerProfile
ProfileController --> MatchSettlement
ProfileController --> ProfileChange
ProfileStore --> PlayerProfile
PlayerProfile --> ProfileStats
PlayerProfile --> AvatarProfile
PlayerProfile --> MatchRecord
PlayerProfile --> AchievementDefinition
BuiltInAvatar --> AvatarProfile

ChudadiApp --> GameController
ChudadiApp --> AiController
ChudadiApp --> GameTransport
ChudadiApp --> GameMessageCodec
ChudadiApp --> RoomSeat
ChudadiApp --> PlayerProfile
ChudadiApp --> ProfileController
ChudadiApp --> ProfileStore
ChudadiApp --> CardRoomMusicPlayer
MainActivity --> ChudadiApp
@enduml
